[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Aseel-Z <aseelalzweri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
jupyter = "^1.0.0"
ipykernel = "^5.5.5"
numpy = "^1.20.3"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
